# warscribe-system

./: .gitignore  404.html  PR_BODY.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.agent/workflows/: git-arch-review.md  git-explain-history.md  git-pr-from-tree.md  git-review-commits.md  jd-bugfix.md  sd-implement.md  sse-code-review.md
.github/workflows/: auto-merge.yml  changelog.yml  ci.yml  codeowners-validator.yml  commit-lint.yml  coverage-report.yml  dependency-audit.yml  dependency-update.yml  deprecation-tracker.yml  docs-build.yml  docs.yml  docstring-coverage.yml  license-header.yml  markdown-lint.yml  migration-safety.yml  package-size.yml  pr-guard.yml  publish-gate.yml  readme-badges.yml  release-drafter.yml  release.yml  sast-scanner.yml  test-impact.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: index.md
features/: integrity.feature
features/steps/: integrity_steps.py
search/: search_index.json
src/warscribe/: integrity.py
src/warscribe/core/schema/: action.py  transcript.py  unit.py
src/warscribe/parser/: api.py  chat_parser.py  db.py  downloader.py  ingest_text.py  orchestrator.py  query_engine.py  retry_embeddings.py  transcriber.py  utils.py  warscribe_llm.py  worker.py
src/warscribe_system/: health.py
src/warscribe_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_scribe.py
