[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warscribe-system"
version = "0.1.0"
description = "Unified Scribe System: Action Notation, Parsing, and Game State Reconstruction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vindicta-foundation",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=8.0.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/warscribe"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
vindicta-foundation = { path = "../vindicta-foundation", editable = true }

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 88
target-version = "py312"
